Update readme and github url

--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -23,7 +23,7 @@
                   <span class="strong">Password: </span>Passw0rd$1<br />
                   <span class="strong">OTP Code: </span>190696<br />
                 </p>
-                <a href="https://github.com">See the github repo for details.</a>
+                <a href="https://github.com/carepenny/nhs-login-js-example">See the github repo for details.</a>
               </div>
               <div class="col col-12 text-center">
                 <button @click="getAuthCode" type="button" id="log-in-button" class="mt" :class="{progress: loggingIn}">
